--- a/css/epp.css
+++ b/css/epp.css
@@ -533,27 +533,22 @@ ul {
 
 .epp-ctn--xxl {
   max-width: 1344px;
-  padding: 0 16px;
 }
 
 .epp-ctn--xl {
   max-width: 1248px;
-  padding: 0 16px;
 }
 
 .epp-ctn--lg {
   max-width: 1056px;
-  padding: 0 16px;
 }
 
 .epp-ctn--md {
   max-width: 960px;
-  padding: 0 16px;
 }
 
 .epp-ctn--sm {
   max-width: 768px;
-  padding: 0 16px;
 }
 
 .epp-ctn--gtr > [class*="epp-cl-"] {
@@ -1093,7 +1088,7 @@ ul {
 }
 @media (max-width: 703px) {
   .hidden--ph {
-    display: none;
+    display: none !important;
   }
 
   .epp-cl-1--ph {
@@ -1426,7 +1421,7 @@ ul {
 }
 @media (min-width: 704px) and (max-width: 1087px) {
   .hidden--tb {
-    display: none;
+    display: none !important;
   }
 
   .epp-cl-1--tb {
@@ -1755,7 +1750,7 @@ ul {
 }
 @media (min-width: 1088px) {
   .hidden--dt {
-    display: none;
+    display: none !important;
   }
 
   .epp-cl-1--dt {
