--- a/scss/epp-grid.scss
+++ b/scss/epp-grid.scss
@@ -43,23 +43,18 @@
 }
 .epp-ctn--xxl{
     max-width:1344px;
-    padding: 0 16px;
 }
 .epp-ctn--xl{
     max-width:1248px;
-    padding: 0 16px;
 }
 .epp-ctn--lg{
     max-width:1056px;
-    padding: 0 16px;
 }
 .epp-ctn--md{
     max-width:960px;
-    padding: 0 16px;
 }
 .epp-ctn--sm{
     max-width:768px;
-    padding: 0 16px;
 }
 .epp-ctn--gtr > [class*="epp-cl-"]{
     box-sizing:border-box;
@@ -471,7 +466,7 @@
 
 @media (max-width:703px){
     .hidden--ph{
-        display:none;
+        display:none!important;
     }
     .epp-cl-1--ph{
         width:100%
@@ -693,7 +688,7 @@
 
 @media (min-width:704px) and (max-width:1087px){
     .hidden--tb{
-        display:none;
+        display:none!important;
     }
     .epp-cl-1--tb{
         width:100%
@@ -912,7 +907,7 @@
 
 @media (min-width:1088px){
     .hidden--dt{
-        display:none;
+        display:none!important;
     }
     .epp-cl-1--dt{
         width:100%
