--- a/scss/_epp-utils.scss
+++ b/scss/_epp-utils.scss
@@ -1,3 +1,19 @@
+//---------------------------------\\
+//----------Table of Content-------\\
+//---------------------------------\\
+
+// 1 Normal utilities
+//      1-1 Air
+//      1-2 Space
+//		1-3 Align
+//		1-4 Hidden
+// 2 Media Queries
+//      2-1 Air
+//      2-2 Space
+//		2-3 Align
+//		2-4 Hidden
+
+
 @import "compass/css3/";
 @import "epp-mixins";
 
@@ -12,20 +28,393 @@
       vertical-align:middle;
     }
 }
-
-.align--right{
-	text-align: right;
-}
-.align--left{
-	text-align: left;
-}
-.align--right{
-	text-center: center;
-}
-
 .ellipsis{
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
 }
 
+
+//---------------------------------\\
+//---------Normal Utilities--------\\
+//---------------------------------\\
+
+//---------------Air---------------\\
+
+.epp-air-8{
+    padding: 8px;
+    box-sizing:border-box;
+}
+.epp-air-left-8{
+    padding-left:8px;
+    box-sizing:border-box;  
+}
+.epp-air-right-8{
+    padding-right:8px;
+    box-sizing:border-box;  
+}
+.epp-air-top-8{
+    padding-top:8px;
+    box-sizing:border-box;  
+}
+.epp-air-bottom-8{
+    padding-bottom:8px;
+    box-sizing:border-box;  
+}
+.epp-air-16{
+    padding: 16px;
+    box-sizing:border-box;
+}
+.epp-air-left-16{
+    padding-left:16px;
+    box-sizing:border-box;  
+}
+.epp-air-right-16{
+    padding-right:16px;
+    box-sizing:border-box;  
+}
+.epp-air-top-16{
+    padding-top:16px;
+    box-sizing:border-box;  
+}
+.epp-air-bottom-16{
+    padding-bottom:16px;
+    box-sizing:border-box;  
+}
+
+//-------------Space-------------\\
+
+.epp-space-8{
+    margin: 8px;
+}
+.epp-space-left-8{
+    margin-left:8px;
+}
+.epp-space-right-8{
+    margin-right:8px;
+}
+.epp-space-top-8{
+    margin-top:8px;
+}
+.epp-space-bottom-8{
+    margin-bottom:8px;
+}
+.epp-space-16{
+    margin: 16px;
+}
+.epp-space-left-16{
+    margin-left:16px;
+}
+.epp-space-right-16{
+    margin-right:16px;
+}
+.epp-space-top-16{
+    margin-top:16px;
+}
+.epp-space-bottom-16{
+    margin-bottom:16px;
+}
+
+//------------Align-------------\\
+
+.align-right{
+	text-align: right;
+}
+.align-left{
+	text-align: left;
+}
+.align-center{
+	text-align: center;
+}
+
+
+
+//---------------------------------\\
+//----------Media Queries----------\\
+//---------------------------------\\
+
+
+
+@media (max-width:767px){
+    
+	.epp-air-8--ph{
+        padding: 8px;
+        box-sizing:border-box;
+    }
+    .epp-air-left-8--ph{
+        padding-left:8px;
+        box-sizing:border-box;  
+    }
+    .epp-air-right-8--ph{
+        padding-right:8px;
+        box-sizing:border-box;  
+    }
+    .epp-air-top-8--ph{
+        padding-top:8px;
+        box-sizing:border-box;  
+    }
+    .epp-air-bottom-8--ph{
+        padding-bottom:8px;
+        box-sizing:border-box;  
+    }
+    .epp-air-16--ph{
+        padding: 16px;
+        box-sizing:border-box;
+    }
+    .epp-air-left-16--ph{
+        padding-left:16px;
+        box-sizing:border-box;  
+    }
+    .epp-air-right-16--ph{
+        padding-right:16px;
+        box-sizing:border-box;  
+    }
+    .epp-air-top-16--ph{
+        padding-top:16px;
+        box-sizing:border-box;  
+    }
+    .epp-air-bottom-16--ph{
+        padding-bottom:16px;
+        box-sizing:border-box;  
+    }
+
+	.epp-space-8--ph{
+	    margin: 8px;
+	}
+	.epp-space-left-8--ph{
+	    margin-left:8px;
+	}
+	.epp-space-right-8--ph{
+	    margin-right:8px;
+	}
+	.epp-space-top-8--ph{
+	    margin-top:8px;
+	}
+	.epp-space-bottom-8--ph{
+	    margin-bottom:8px;
+	}
+	.epp-space-16--ph{
+	    margin: 16px;
+	}
+	.epp-space-left-16--ph{
+	    margin-left:16px;
+	}
+	.epp-space-right-16--ph{
+	    margin-right:16px;
+	}
+	.epp-space-top-16--ph{
+	    margin-top:16px;
+	}
+	.epp-space-bottom-16--ph{
+	    margin-bottom:16px;
+	}
+
+    .align-right--ph{
+		text-align: right;
+	}
+	.align-left--ph{
+		text-align: left;
+	}
+	.align-center--ph{
+		text-align: center;
+	}
+
+	.hidden--ph{
+        display:none!important;
+    }
+}
+
+
+
+@media (min-width:768px) and (max-width:1151px){
+
+    // Column Space Tablet
+
+    .epp-air-8--tb{
+        padding: 8px;
+        box-sizing:border-box;
+    }
+    .epp-air-left-8--tb{
+        padding-left:8px;
+        box-sizing:border-box;  
+    }
+    .epp-air-right-8--tb{
+        padding-right:8px;
+        box-sizing:border-box;  
+    }
+    .epp-air-top-8--tb{
+        padding-top:8px;
+        box-sizing:border-box;  
+    }
+    .epp-air-bottom-8--tb{
+        padding-bottom:8px;
+        box-sizing:border-box;  
+    }
+    .epp-air-16--tb{
+        padding: 16px;
+        box-sizing:border-box;
+    }
+    .epp-air-left-16--tb{
+        padding-left:16px;
+        box-sizing:border-box;  
+    }
+    .epp-air-right-16--tb{
+        padding-right:16px;
+        box-sizing:border-box;  
+    }
+    .epp-air-top-16--tb{
+        padding-top:16px;
+        box-sizing:border-box;  
+    }
+    .epp-air-bottom-16--tb{
+        padding-bottom:16px;
+        box-sizing:border-box;  
+    }
+
+	.epp-space-8--tb{
+	    margin: 8px;
+	}
+	.epp-space-left-8--tb{
+	    margin-left:8px;
+	}
+	.epp-space-right-8--tb{
+	    margin-right:8px;
+	}
+	.epp-space-top-8--tb{
+	    margin-top:8px;
+	}
+	.epp-space-bottom-8--tb{
+	    margin-bottom:8px;
+	}
+	.epp-space-16--tb{
+	    margin: 16px;
+	}
+	.epp-space-left-16--tb{
+	    margin-left:16px;
+	}
+	.epp-space-right-16--tb{
+	    margin-right:16px;
+	}
+	.epp-space-top-16--tb{
+	    margin-top:16px;
+	}
+	.epp-space-bottom-16--tb{
+	    margin-bottom:16px;
+	}
+
+    .align-right--tb{
+		text-align: right;
+	}
+	.align-left--tb{
+		text-align: left;
+	}
+	.align-center--tb{
+		text-align: center;
+	}
+
+	.hidden--tb{
+        display:none!important;
+    }
+
+	.align--right--tb{
+		text-align: right;
+	}
+	.align--left--tb{
+		text-align: left;
+	}
+	.align--center--tb{
+		text-align: center;
+	}
+}
+
+// Align Desktop from 1152
+
+@media (min-width:1152px){
+
+	 // Columns Space Desktop
+
+    .epp-air-8--dt{
+        padding: 8px;
+        box-sizing:border-box;
+    }
+    .epp-air-left-8--dt{
+        padding-left:8px;
+        box-sizing:border-box;  
+    }
+    .epp-air-right-8--dt{
+        padding-right:8px;
+        box-sizing:border-box;  
+    }
+    .epp-air-top-8--dt{
+        padding-top:8px;
+        box-sizing:border-box;  
+    }
+    .epp-air-bottom-8--dt{
+        padding-bottom:8px;
+        box-sizing:border-box;  
+    }
+    .epp-air-16--dt{
+        padding: 16px;
+        box-sizing:border-box;
+    }
+    .epp-air-left-16--dt{
+        padding-left:16px;
+        box-sizing:border-box;  
+    }
+    .epp-air-right-16--dt{
+        padding-right:16px;
+        box-sizing:border-box;  
+    }
+    .epp-air-top-16--dt{
+        padding-top:16px;
+        box-sizing:border-box;  
+    }
+    .epp-air-bottom-16--dt{
+        padding-bottom:16px;
+        box-sizing:border-box;  
+    }
+
+	.epp-space-8--tb{
+	    margin: 8px;
+	}
+	.epp-space-left-8--tb{
+	    margin-left:8px;
+	}
+	.epp-space-right-8--tb{
+	    margin-right:8px;
+	}
+	.epp-space-top-8--tb{
+	    margin-top:8px;
+	}
+	.epp-space-bottom-8--tb{
+	    margin-bottom:8px;
+	}
+	.epp-space-16--tb{
+	    margin: 16px;
+	}
+	.epp-space-left-16--tb{
+	    margin-left:16px;
+	}
+	.epp-space-right-16--tb{
+	    margin-right:16px;
+	}
+	.epp-space-top-16--tb{
+	    margin-top:16px;
+	}
+	.epp-space-bottom-16--tb{
+	    margin-bottom:16px;
+	}
+
+	.align-right--dt{
+		text-align: right;
+	}
+	.align-left--dt{
+		text-align: left;
+	}
+	.align-center--dt{
+		text-align: center;
+	}
+	.hidden--dt{
+        display:none!important;
+    }
+}
