--- a/css/epp.css
+++ b/css/epp.css
@@ -847,57 +847,32 @@ ul {
   *margin-left: 95.8023%;
 }
 
-.epp-air-8 {
-  padding: 8px;
-  box-sizing: border-box;
-}
+@media (max-width: 287px) {
+  .epp-ctn--xxl {
+    max-width: 100%;
+  }
 
-.epp-air-left-8 {
-  padding-left: 8px;
-  box-sizing: border-box;
-}
+  .epp-ctn--xl {
+    max-width: 100%;
+  }
 
-.epp-air-right-8 {
-  padding-right: 8px;
-  box-sizing: border-box;
-}
+  .epp-ctn--lg {
+    max-width: 100%;
+  }
 
-.epp-air-top-8 {
-  padding-top: 8px;
-  box-sizing: border-box;
-}
+  .epp-ctn--md {
+    max-width: 100%;
+  }
 
-.epp-air-bottom-8 {
-  padding-bottom: 8px;
-  box-sizing: border-box;
+  .epp-ctn--sm {
+    max-width: 100%;
+  }
 }
+@media (min-width: 288px) and (max-width: 383px) {
+  .epp-ctn--xxl {
+    max-width: 288px;
+  }
 
-.epp-air-16 {
-  padding: 16px;
-  box-sizing: border-box;
-}
-
-.epp-air-left-16 {
-  padding-left: 16px;
-  box-sizing: border-box;
-}
-
-.epp-air-right-16 {
-  padding-right: 16px;
-  box-sizing: border-box;
-}
-
-.epp-air-top-16 {
-  padding-top: 16px;
-  box-sizing: border-box;
-}
-
-.epp-air-bottom-16 {
-  padding-bottom: 16px;
-  box-sizing: border-box;
-}
-
-@media (max-width: 415px) {
   .epp-ctn--xl {
     max-width: 288px;
   }
@@ -914,7 +889,11 @@ ul {
     max-width: 288px;
   }
 }
-@media (min-width: 416px) and (max-width: 511px) {
+@media (min-width: 384px) and (max-width: 479px) {
+  .epp-ctn--xxl {
+    max-width: 384px;
+  }
+
   .epp-ctn--xl {
     max-width: 384px;
   }
@@ -931,7 +910,11 @@ ul {
     max-width: 384px;
   }
 }
-@media (min-width: 512px) and (max-width: 607px) {
+@media (min-width: 480px) and (max-width: 575px) {
+  .epp-ctn--xxl {
+    max-width: 480px;
+  }
+
   .epp-ctn--xl {
     max-width: 480px;
   }
@@ -948,7 +931,11 @@ ul {
     max-width: 480px;
   }
 }
-@media (min-width: 608px) and (max-width: 703px) {
+@media (min-width: 576px) and (max-width: 671px) {
+  .epp-ctn--xxl {
+    max-width: 576px;
+  }
+
   .epp-ctn--xl {
     max-width: 576px;
   }
@@ -965,7 +952,11 @@ ul {
     max-width: 576px;
   }
 }
-@media (min-width: 704px) and (max-width: 799px) {
+@media (min-width: 672px) and (max-width: 767px) {
+  .epp-ctn--xxl {
+    max-width: 672px;
+  }
+
   .epp-ctn--xl {
     max-width: 672px;
   }
@@ -982,7 +973,32 @@ ul {
     max-width: 672px;
   }
 }
-@media (min-width: 800px) and (max-width: 895px) {
+@media (min-width: 672px) and (max-width: 767px) {
+  .epp-ctn--xxl {
+    max-width: 672px;
+  }
+
+  .epp-ctn--xl {
+    max-width: 672px;
+  }
+
+  .epp-ctn--lg {
+    max-width: 672px;
+  }
+
+  .epp-ctn--md {
+    max-width: 672px;
+  }
+
+  .epp-ctn--sm {
+    max-width: 672px;
+  }
+}
+@media (min-width: 768px) and (max-width: 863px) {
+  .epp-ctn--xxl {
+    max-width: 768px;
+  }
+
   .epp-ctn--xl {
     max-width: 768px;
   }
@@ -996,11 +1012,14 @@ ul {
   }
 
   .epp-ctn--sm {
-    padding: 0 16px;
     max-width: 768px;
   }
 }
-@media (min-width: 896px) and (max-width: 991px) {
+@media (min-width: 864px) and (max-width: 959px) {
+  .epp-ctn--xxl {
+    max-width: 864px;
+  }
+
   .epp-ctn--xl {
     max-width: 864px;
   }
@@ -1017,7 +1036,11 @@ ul {
     max-width: 768px;
   }
 }
-@media (min-width: 992px) and (max-width: 1087px) {
+@media (min-width: 960px) and (max-width: 1055px) {
+  .epp-ctn--xxl {
+    max-width: 960px;
+  }
+
   .epp-ctn--xl {
     max-width: 960px;
   }
@@ -1034,7 +1057,11 @@ ul {
     max-width: 768px;
   }
 }
-@media (min-width: 1088px) and (max-width: 1279px) {
+@media (min-width: 1056px) and (max-width: 1151px) {
+  .epp-ctn--xxl {
+    max-width: 1056px;
+  }
+
   .epp-ctn--xl {
     max-width: 1056px;
   }
@@ -1051,7 +1078,32 @@ ul {
     max-width: 768px;
   }
 }
-@media (min-width: 1280px) and (max-width: 1663px) {
+@media (min-width: 1152px) and (max-width: 1247px) {
+  .epp-ctn--xxl {
+    max-width: 1152px;
+  }
+
+  .epp-ctn--xl {
+    max-width: 1056px;
+  }
+
+  .epp-ctn--lg {
+    max-width: 1056px;
+  }
+
+  .epp-ctn--md {
+    max-width: 960px;
+  }
+
+  .epp-ctn--sm {
+    max-width: 768px;
+  }
+}
+@media (min-width: 1248px) and (max-width: 1343px) {
+  .epp-ctn--xxl {
+    max-width: 1248px;
+  }
+
   .epp-ctn--xl {
     max-width: 1248px;
   }
@@ -1065,11 +1117,14 @@ ul {
   }
 
   .epp-ctn--sm {
-    padding: 0 16px;
     max-width: 768px;
   }
 }
-@media (min-width: 1664px) and (max-width: 2239px) {
+@media (min-width: 1344px) {
+  .epp-ctn--xxl {
+    max-width: 1344px;
+  }
+
   .epp-ctn--xl {
     max-width: 1248px;
   }
@@ -1086,11 +1141,7 @@ ul {
     max-width: 768px;
   }
 }
-@media (max-width: 703px) {
-  .hidden--ph {
-    display: none !important;
-  }
-
+@media (max-width: 767px) {
   .epp-cl-1--ph {
     width: 100%;
   }
@@ -1200,7 +1251,7 @@ ul {
     *width: 29.1357%;
   }
 
-  .epp-cl-11-12 {
+  .epp-cl-11-12--ph {
     width: 91.6667%;
     *width: 91.6357%;
   }
@@ -1368,58 +1419,8 @@ ul {
     margin-left: 95.8333%;
     *margin-left: 95.8023%;
   }
-
-  .epp-air-8--ph {
-    padding: 8px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-left-8--ph {
-    padding-left: 8px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-right-8--ph {
-    padding-right: 8px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-top-8--ph {
-    padding-top: 8px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-bottom-8--ph {
-    padding-bottom: 8px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-16--ph {
-    padding: 16px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-left-16--ph {
-    padding-left: 16px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-right-16--ph {
-    padding-right: 16px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-top-16--ph {
-    padding-top: 16px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-bottom-16--ph {
-    padding-bottom: 16px;
-    box-sizing: border-box;
-  }
 }
-@media (min-width: 704px) and (max-width: 1087px) {
+@media (min-width: 768px) and (max-width: 1151px) {
   .hidden--tb {
     display: none !important;
   }
@@ -1697,62 +1698,8 @@ ul {
     margin-left: 95.8333%;
     *width: 95.8023%;
   }
-
-  .epp-air-8--tb {
-    padding: 8px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-left-8--tb {
-    padding-left: 8px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-right-8--tb {
-    padding-right: 8px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-top-8--tb {
-    padding-top: 8px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-bottom-8--tb {
-    padding-bottom: 8px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-16--tb {
-    padding: 16px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-left-16--tb {
-    padding-left: 16px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-right-16--tb {
-    padding-right: 16px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-top-16--tb {
-    padding-top: 16px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-bottom-16--tb {
-    padding-bottom: 16px;
-    box-sizing: border-box;
-  }
 }
-@media (min-width: 1088px) {
-  .hidden--dt {
-    display: none !important;
-  }
-
+@media (min-width: 1152px) {
   .epp-cl-1--dt {
     width: 100%;
   }
@@ -2026,56 +1973,6 @@ ul {
     margin-left: 95.8333%;
     *margin-left: 95.8023%;
   }
-
-  .epp-air-8--dt {
-    padding: 8px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-left-8--dt {
-    padding-left: 8px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-right-8--dt {
-    padding-right: 8px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-top-8--dt {
-    padding-top: 8px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-bottom-8--dt {
-    padding-bottom: 8px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-16--dt {
-    padding: 16px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-left-16--dt {
-    padding-left: 16px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-right-16--dt {
-    padding-right: 16px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-top-16--dt {
-    padding-top: 16px;
-    box-sizing: border-box;
-  }
-
-  .epp-air-bottom-16--dt {
-    padding-bottom: 16px;
-    box-sizing: border-box;
-  }
 }
 .button {
   background: #fff;
@@ -2253,12 +2150,466 @@ ul {
 
 .display-table {
   display: table;
+  height: 100%;
 }
 .display-table > * {
   display: table-cell;
+}
+.display-table--top > * {
+  vertical-align: top;
+}
+.display-table--middle > * {
   vertical-align: middle;
 }
+.display-table--bottom > * {
+  vertical-align: bottom;
+}
 
+.ellipsis {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.epp-air-8 {
+  padding: 8px;
+  box-sizing: border-box;
+}
+
+.epp-air-left-8 {
+  padding-left: 8px;
+  box-sizing: border-box;
+}
+
+.epp-air-right-8 {
+  padding-right: 8px;
+  box-sizing: border-box;
+}
+
+.epp-air-top-8 {
+  padding-top: 8px;
+  box-sizing: border-box;
+}
+
+.epp-air-bottom-8 {
+  padding-bottom: 8px;
+  box-sizing: border-box;
+}
+
+.epp-air-16 {
+  padding: 16px;
+  box-sizing: border-box;
+}
+
+.epp-air-left-16 {
+  padding-left: 16px;
+  box-sizing: border-box;
+}
+
+.epp-air-right-16 {
+  padding-right: 16px;
+  box-sizing: border-box;
+}
+
+.epp-air-top-16 {
+  padding-top: 16px;
+  box-sizing: border-box;
+}
+
+.epp-air-bottom-16 {
+  padding-bottom: 16px;
+  box-sizing: border-box;
+}
+
+.epp-space-8 {
+  margin: 8px;
+}
+
+.epp-space-left-8 {
+  margin-left: 8px;
+}
+
+.epp-space-right-8 {
+  margin-right: 8px;
+}
+
+.epp-space-top-8 {
+  margin-top: 8px;
+}
+
+.epp-space-bottom-8 {
+  margin-bottom: 8px;
+}
+
+.epp-space-16 {
+  margin: 16px;
+}
+
+.epp-space-left-16 {
+  margin-left: 16px;
+}
+
+.epp-space-right-16 {
+  margin-right: 16px;
+}
+
+.epp-space-top-16 {
+  margin-top: 16px;
+}
+
+.epp-space-bottom-16 {
+  margin-bottom: 16px;
+}
+
+.align-right {
+  text-align: right;
+}
+
+.align-left {
+  text-align: left;
+}
+
+.align-center {
+  text-align: center;
+}
+
+.hidden {
+  display: none;
+}
+
+@media (max-width: 767px) {
+  .epp-air-8--ph {
+    padding: 8px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-left-8--ph {
+    padding-left: 8px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-right-8--ph {
+    padding-right: 8px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-top-8--ph {
+    padding-top: 8px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-bottom-8--ph {
+    padding-bottom: 8px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-16--ph {
+    padding: 16px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-left-16--ph {
+    padding-left: 16px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-right-16--ph {
+    padding-right: 16px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-top-16--ph {
+    padding-top: 16px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-bottom-16--ph {
+    padding-bottom: 16px;
+    box-sizing: border-box;
+  }
+
+  .epp-space-8--ph {
+    margin: 8px;
+  }
+
+  .epp-space-left-8--ph {
+    margin-left: 8px;
+  }
+
+  .epp-space-right-8--ph {
+    margin-right: 8px;
+  }
+
+  .epp-space-top-8--ph {
+    margin-top: 8px;
+  }
+
+  .epp-space-bottom-8--ph {
+    margin-bottom: 8px;
+  }
+
+  .epp-space-16--ph {
+    margin: 16px;
+  }
+
+  .epp-space-left-16--ph {
+    margin-left: 16px;
+  }
+
+  .epp-space-right-16--ph {
+    margin-right: 16px;
+  }
+
+  .epp-space-top-16--ph {
+    margin-top: 16px;
+  }
+
+  .epp-space-bottom-16--ph {
+    margin-bottom: 16px;
+  }
+
+  .align-right--ph {
+    text-align: right;
+  }
+
+  .align-left--ph {
+    text-align: left;
+  }
+
+  .align-center--ph {
+    text-align: center;
+  }
+
+  .hidden--ph {
+    display: none !important;
+  }
+}
+@media (min-width: 768px) and (max-width: 1151px) {
+  .epp-air-8--tb {
+    padding: 8px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-left-8--tb {
+    padding-left: 8px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-right-8--tb {
+    padding-right: 8px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-top-8--tb {
+    padding-top: 8px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-bottom-8--tb {
+    padding-bottom: 8px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-16--tb {
+    padding: 16px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-left-16--tb {
+    padding-left: 16px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-right-16--tb {
+    padding-right: 16px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-top-16--tb {
+    padding-top: 16px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-bottom-16--tb {
+    padding-bottom: 16px;
+    box-sizing: border-box;
+  }
+
+  .epp-space-8--tb {
+    margin: 8px;
+  }
+
+  .epp-space-left-8--tb {
+    margin-left: 8px;
+  }
+
+  .epp-space-right-8--tb {
+    margin-right: 8px;
+  }
+
+  .epp-space-top-8--tb {
+    margin-top: 8px;
+  }
+
+  .epp-space-bottom-8--tb {
+    margin-bottom: 8px;
+  }
+
+  .epp-space-16--tb {
+    margin: 16px;
+  }
+
+  .epp-space-left-16--tb {
+    margin-left: 16px;
+  }
+
+  .epp-space-right-16--tb {
+    margin-right: 16px;
+  }
+
+  .epp-space-top-16--tb {
+    margin-top: 16px;
+  }
+
+  .epp-space-bottom-16--tb {
+    margin-bottom: 16px;
+  }
+
+  .align-right--tb {
+    text-align: right;
+  }
+
+  .align-left--tb {
+    text-align: left;
+  }
+
+  .align-center--tb {
+    text-align: center;
+  }
+
+  .hidden--tb {
+    display: none !important;
+  }
+
+  .align--right--tb {
+    text-align: right;
+  }
+
+  .align--left--tb {
+    text-align: left;
+  }
+
+  .align--center--tb {
+    text-align: center;
+  }
+}
+@media (min-width: 1152px) {
+  .epp-air-8--dt {
+    padding: 8px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-left-8--dt {
+    padding-left: 8px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-right-8--dt {
+    padding-right: 8px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-top-8--dt {
+    padding-top: 8px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-bottom-8--dt {
+    padding-bottom: 8px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-16--dt {
+    padding: 16px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-left-16--dt {
+    padding-left: 16px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-right-16--dt {
+    padding-right: 16px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-top-16--dt {
+    padding-top: 16px;
+    box-sizing: border-box;
+  }
+
+  .epp-air-bottom-16--dt {
+    padding-bottom: 16px;
+    box-sizing: border-box;
+  }
+
+  .epp-space-8--dt {
+    margin: 8px;
+  }
+
+  .epp-space-left-8--dt {
+    margin-left: 8px;
+  }
+
+  .epp-space-right-8--dt {
+    margin-right: 8px;
+  }
+
+  .epp-space-top-8--dt {
+    margin-top: 8px;
+  }
+
+  .epp-space-bottom-8--dt {
+    margin-bottom: 8px;
+  }
+
+  .epp-space-16--dt {
+    margin: 16px;
+  }
+
+  .epp-space-left-16--dt {
+    margin-left: 16px;
+  }
+
+  .epp-space-right-16--tb {
+    margin-right: 16px;
+  }
+
+  .epp-space-top-16--dt {
+    margin-top: 16px;
+  }
+
+  .epp-space-bottom-16--dt {
+    margin-bottom: 16px;
+  }
+
+  .align-right--dt {
+    text-align: right;
+  }
+
+  .align-left--dt {
+    text-align: left;
+  }
+
+  .align-center--dt {
+    text-align: center;
+  }
+
+  .hidden--dt {
+    display: none !important;
+  }
+}
 input::-webkit-input-placeholder {
   font-weight: normal;
 }
