--- a/scss/_epp-utils.scss
+++ b/scss/_epp-utils.scss
@@ -57,50 +57,50 @@
 //---------------Air---------------\\
 
 .epp-air-8{
-    padding: 8px;
+    padding: 8px!important;
     box-sizing:border-box;
 }
 .epp-air-left-8{
-    padding-left:8px;
+    padding-left:8px!important;
     box-sizing:border-box;  
 }
 .epp-air-right-8{
-    padding-right:8px;
+    padding-right:8px!important;
     box-sizing:border-box;  
 }
 .epp-air-top-8{
-    padding-top:8px;
+    padding-top:8px!important;
     box-sizing:border-box;  
 }
 .epp-air-bottom-8{
-    padding-bottom:8px;
+    padding-bottom:8px!important;
     box-sizing:border-box;  
 }
 .epp-air-16{
-    padding: 16px;
+    padding: 16px!important;
     box-sizing:border-box;
 }
 .epp-air-left-16{
-    padding-left:16px;
+    padding-left:16px!important;
     box-sizing:border-box;  
 }
 .epp-air-right-16{
-    padding-right:16px;
+    padding-right:16px!important;
     box-sizing:border-box;  
 }
 .epp-air-top-16{
-    padding-top:16px;
+    padding-top:16px!important;
     box-sizing:border-box;  
 }
 .epp-air-bottom-16{
-    padding-bottom:16px;
+    padding-bottom:16px!important;
     box-sizing:border-box;  
 }
 
 //-------------Space-------------\\
 
 .epp-space-8{
-    margin: 8px;
+    margin:8px;
 }
 .epp-space-left-8{
     margin-left:8px;
@@ -115,7 +115,7 @@
     margin-bottom:8px;
 }
 .epp-space-16{
-    margin: 16px;
+    margin:16px;
 }
 .epp-space-left-16{
     margin-left:16px;
@@ -156,48 +156,48 @@
 @media (max-width:767px){
     
 	.epp-air-8--ph{
-        padding: 8px;
+        padding: 8px!important;
         box-sizing:border-box;
     }
     .epp-air-left-8--ph{
-        padding-left:8px;
+        padding-left:8px!important;
         box-sizing:border-box;  
     }
     .epp-air-right-8--ph{
-        padding-right:8px;
+        padding-right:8px!important;
         box-sizing:border-box;  
     }
     .epp-air-top-8--ph{
-        padding-top:8px;
+        padding-top:8px!important;
         box-sizing:border-box;  
     }
     .epp-air-bottom-8--ph{
-        padding-bottom:8px;
+        padding-bottom:8px!important;
         box-sizing:border-box;  
     }
     .epp-air-16--ph{
-        padding: 16px;
+        padding: 16px!important;
         box-sizing:border-box;
     }
     .epp-air-left-16--ph{
-        padding-left:16px;
+        padding-left:16px!important;
         box-sizing:border-box;  
     }
     .epp-air-right-16--ph{
-        padding-right:16px;
+        padding-right:16px!important;
         box-sizing:border-box;  
     }
     .epp-air-top-16--ph{
-        padding-top:16px;
+        padding-top:16px!important;
         box-sizing:border-box;  
     }
     .epp-air-bottom-16--ph{
-        padding-bottom:16px;
+        padding-bottom:16px!important;
         box-sizing:border-box;  
     }
 
 	.epp-space-8--ph{
-	    margin: 8px;
+	    margin:8px;
 	}
 	.epp-space-left-8--ph{
 	    margin-left:8px;
@@ -212,7 +212,7 @@
 	    margin-bottom:8px;
 	}
 	.epp-space-16--ph{
-	    margin: 16px;
+	    margin:16px;
 	}
 	.epp-space-left-16--ph{
 	    margin-left:16px;
@@ -249,48 +249,48 @@
     // Column Space Tablet
 
     .epp-air-8--tb{
-        padding: 8px;
+        padding: 8px!important;
         box-sizing:border-box;
     }
     .epp-air-left-8--tb{
-        padding-left:8px;
+        padding-left:8px!important;
         box-sizing:border-box;  
     }
     .epp-air-right-8--tb{
-        padding-right:8px;
+        padding-right:8px!important;
         box-sizing:border-box;  
     }
     .epp-air-top-8--tb{
-        padding-top:8px;
+        padding-top:8px!important;
         box-sizing:border-box;  
     }
     .epp-air-bottom-8--tb{
-        padding-bottom:8px;
+        padding-bottom:8px!important;
         box-sizing:border-box;  
     }
     .epp-air-16--tb{
-        padding: 16px;
+        padding: 16px!important;
         box-sizing:border-box;
     }
     .epp-air-left-16--tb{
-        padding-left:16px;
+        padding-left:16px!important;
         box-sizing:border-box;  
     }
     .epp-air-right-16--tb{
-        padding-right:16px;
+        padding-right:16px!important;
         box-sizing:border-box;  
     }
     .epp-air-top-16--tb{
-        padding-top:16px;
+        padding-top:16px!important;
         box-sizing:border-box;  
     }
     .epp-air-bottom-16--tb{
-        padding-bottom:16px;
+        padding-bottom:16px!important;
         box-sizing:border-box;  
     }
 
 	.epp-space-8--tb{
-	    margin: 8px;
+	    margin:8px;
 	}
 	.epp-space-left-8--tb{
 	    margin-left:8px;
@@ -305,7 +305,7 @@
 	    margin-bottom:8px;
 	}
 	.epp-space-16--tb{
-	    margin: 16px;
+	    margin:16px;
 	}
 	.epp-space-left-16--tb{
 	    margin-left:16px;
@@ -352,48 +352,48 @@
 	 // Columns Space Desktop
 
     .epp-air-8--dt{
-        padding: 8px;
+        padding: 8px!important;
         box-sizing:border-box;
     }
     .epp-air-left-8--dt{
-        padding-left:8px;
+        padding-left:8px!important;
         box-sizing:border-box;  
     }
     .epp-air-right-8--dt{
-        padding-right:8px;
+        padding-right:8px!important;
         box-sizing:border-box;  
     }
     .epp-air-top-8--dt{
-        padding-top:8px;
+        padding-top:8px!important;
         box-sizing:border-box;  
     }
     .epp-air-bottom-8--dt{
-        padding-bottom:8px;
+        padding-bottom:8px!important;
         box-sizing:border-box;  
     }
     .epp-air-16--dt{
-        padding: 16px;
+        padding: 16px!important;
         box-sizing:border-box;
     }
     .epp-air-left-16--dt{
-        padding-left:16px;
+        padding-left:16px!important;
         box-sizing:border-box;  
     }
     .epp-air-right-16--dt{
-        padding-right:16px;
+        padding-right:16px!important;
         box-sizing:border-box;  
     }
     .epp-air-top-16--dt{
-        padding-top:16px;
+        padding-top:16px!important;
         box-sizing:border-box;  
     }
     .epp-air-bottom-16--dt{
-        padding-bottom:16px;
+        padding-bottom:16px!important;
         box-sizing:border-box;  
     }
 
 	.epp-space-8--dt{
-	    margin: 8px;
+	    margin:8px;
 	}
 	.epp-space-left-8--dt{
 	    margin-left:8px;
@@ -408,7 +408,7 @@
 	    margin-bottom:8px;
 	}
 	.epp-space-16--dt{
-	    margin: 16px;
+	    margin:16px;
 	}
 	.epp-space-left-16--dt{
 	    margin-left:16px;
