--- a/scss/_epp-grid.scss
+++ b/scss/_epp-grid.scss
@@ -37,6 +37,9 @@
     @include transition-property(all);
     @include transition-duration(400ms);
     @include transition-timing-function(ease-out);
+    *{
+    	letter-spacing: normal;
+    }
 }
 .epp-ctn--xxl{
     max-width:1344px;
@@ -423,24 +426,6 @@
     }
     .epp-ctn--sm{
         max-width:576px;
-    }
-}
-
-@media (min-width:672px) and (max-width:767px){
-    .epp-ctn--xxl{
-        max-width:672px;
-    }
-    .epp-ctn--xl{
-        max-width:672px;
-    }
-    .epp-ctn--lg{
-        max-width:672px;
-    }
-    .epp-ctn--md{
-        max-width:672px;
-    }
-    .epp-ctn--sm{
-        max-width:672px;
     }
 }
 
