--- a/scss/_epp-utils.scss
+++ b/scss/_epp-utils.scss
@@ -7,17 +7,22 @@
 //      1-2 Space
 //		1-3 Align
 //		1-4 Hidden
+//      1-5 Float
 // 2 Media Queries
 //      2-1 Air
 //      2-2 Space
 //		2-3 Align
 //		2-4 Hidden
+//      2-5 Float
 
 
 @import "compass/css3/";
 @import "epp-mixins";
 
 .input--block{
+  width: 100%;
+}
+.select--block{
   width: 100%;
 }
 
@@ -29,17 +34,17 @@
     }
     &--top{
         & > *{
-            vertical-align: top; 
+            vertical-align: top!important; 
         }
     }
     &--middle{
         & > *{
-            vertical-align: middle; 
+            vertical-align: middle!important; 
         } 
     }
     &--bottom{
         & > *{
-            vertical-align: bottom; 
+            vertical-align: bottom!important; 
         }
     } 
 }
@@ -54,7 +59,7 @@
 //---------Normal Utilities--------\\
 //---------------------------------\\
 
-//---------------Air---------------\\
+//Air
 
 .epp-air-8{
     padding: 8px!important;
@@ -96,8 +101,48 @@
     padding-bottom:16px!important;
     box-sizing:border-box;  
 }
+.epp-air-24{
+    padding: 24px!important;
+    box-sizing:border-box;
+}
+.epp-air-left-24{
+    padding-left:24px!important;
+    box-sizing:border-box;  
+}
+.epp-air-right-24{
+    padding-right:24px!important;
+    box-sizing:border-box;  
+}
+.epp-air-top-24{
+    padding-top:24px!important;
+    box-sizing:border-box;  
+}
+.epp-air-bottom-24{
+    padding-bottom:24px!important;
+    box-sizing:border-box;  
+}
+.epp-air-32{
+    padding: 32px!important;
+    box-sizing:border-box;
+}
+.epp-air-left-32{
+    padding-left:32px!important;
+    box-sizing:border-box;  
+}
+.epp-air-right-32{
+    padding-right:32px!important;
+    box-sizing:border-box;  
+}
+.epp-air-top-32{
+    padding-top:32px!important;
+    box-sizing:border-box;  
+}
+.epp-air-bottom-32{
+    padding-bottom:32px!important;
+    box-sizing:border-box;  
+}
 
-//-------------Space-------------\\
+// Space
 
 .epp-space-8{
     margin:8px;
@@ -129,8 +174,38 @@
 .epp-space-bottom-16{
     margin-bottom:16px;
 }
+.epp-space-24{
+    margin:24px;
+}
+.epp-space-left-24{
+    margin-left:24px;
+}
+.epp-space-right-24{
+    margin-right:24px;
+}
+.epp-space-top-24{
+    margin-top:24px;
+}
+.epp-space-bottom-24{
+    margin-bottom:24px;
+}
+.epp-space-32{
+    margin:32px;
+}
+.epp-space-left-32{
+    margin-left:32px;
+}
+.epp-space-right-32{
+    margin-right:32px;
+}
+.epp-space-top-32{
+    margin-top:32px;
+}
+.epp-space-bottom-32{
+    margin-bottom:32px;
+}
 
-//------------Align-------------\\
+//Align
 
 .align-right{
 	text-align: right;
@@ -142,10 +217,20 @@
 	text-align: center;
 }
 
+// Hidden
+
 .hidden{
     display:none;
 }
 
+//Float
+
+.float-left{
+    float: left;
+}
+.float-right{
+    float: right;
+}
 
 //---------------------------------\\
 //----------Media Queries----------\\
@@ -155,6 +240,8 @@
 
 @media (max-width:767px){
     
+    // Air Phone
+
 	.epp-air-8--ph{
         padding: 8px!important;
         box-sizing:border-box;
@@ -195,6 +282,48 @@
         padding-bottom:16px!important;
         box-sizing:border-box;  
     }
+    .epp-air-24--ph{
+        padding: 24px!important;
+        box-sizing:border-box;
+    }
+    .epp-air-left-24--ph{
+        padding-left:24px!important;
+        box-sizing:border-box;  
+    }
+    .epp-air-right-24--ph{
+        padding-right:24px!important;
+        box-sizing:border-box;  
+    }
+    .epp-air-top-24--ph{
+        padding-top:24px!important;
+        box-sizing:border-box;  
+    }
+    .epp-air-bottom-24--ph{
+        padding-bottom:24px!important;
+        box-sizing:border-box;  
+    }
+    .epp-air-32--ph{
+        padding: 32px!important;
+        box-sizing:border-box;
+    }
+    .epp-air-left-32--ph{
+        padding-left:32px!important;
+        box-sizing:border-box;  
+    }
+    .epp-air-right-32--ph{
+        padding-right:32px!important;
+        box-sizing:border-box;  
+    }
+    .epp-air-top-32--ph{
+        padding-top:32px!important;
+        box-sizing:border-box;  
+    }
+    .epp-air-bottom-32--ph{
+        padding-bottom:32px!important;
+        box-sizing:border-box;  
+    }
+
+    // Space Phone
 
 	.epp-space-8--ph{
 	    margin:8px;
@@ -226,6 +355,38 @@
 	.epp-space-bottom-16--ph{
 	    margin-bottom:16px;
 	}
+    .epp-space-24--ph{
+        margin:24px;
+    }
+    .epp-space-left-24--ph{
+        margin-left:24px;
+    }
+    .epp-space-right-24--ph{
+        margin-right:24px;
+    }
+    .epp-space-top-24--ph{
+        margin-top:24px;
+    }
+    .epp-space-bottom-24--ph{
+        margin-bottom:24px;
+    }
+    .epp-space-32--ph{
+        margin:32px;
+    }
+    .epp-space-left-32--ph{
+        margin-left:32px;
+    }
+    .epp-space-right-32--ph{
+        margin-right:32px;
+    }
+    .epp-space-top-32--ph{
+        margin-top:32px;
+    }
+    .epp-space-bottom-32--ph{
+        margin-bottom:32px;
+    }
+        
+    // Align Phone
 
     .align-right--ph{
 		text-align: right;
@@ -236,9 +397,20 @@
 	.align-center--ph{
 		text-align: center;
 	}
+    
+    // Hidden Phone
 
 	.hidden--ph{
         display:none!important;
+    }
+
+    // Float Phone
+
+    .float-left--ph{
+        float: left;
+    }
+    .float-right--ph{
+        float: right;
     }
 }
 
@@ -246,7 +418,7 @@
 
 @media (min-width:768px) and (max-width:1151px){
 
-    // Column Space Tablet
+    // Air Tablet
 
     .epp-air-8--tb{
         padding: 8px!important;
@@ -288,6 +460,48 @@
         padding-bottom:16px!important;
         box-sizing:border-box;  
     }
+    .epp-air-24--tb{
+        padding: 24px!important;
+        box-sizing:border-box;
+    }
+    .epp-air-left-24--tb{
+        padding-left:24px!important;
+        box-sizing:border-box;  
+    }
+    .epp-air-right-24--tb{
+        padding-right:24px!important;
+        box-sizing:border-box;  
+    }
+    .epp-air-top-24--tb{
+        padding-top:24px!important;
+        box-sizing:border-box;  
+    }
+    .epp-air-bottom-24--tb{
+        padding-bottom:24px!important;
+        box-sizing:border-box;  
+    }
+    .epp-air-32--tb{
+        padding: 32px!important;
+        box-sizing:border-box;
+    }
+    .epp-air-left-32--tb{
+        padding-left:32px!important;
+        box-sizing:border-box;  
+    }
+    .epp-air-right-32--tb{
+        padding-right:32px!important;
+        box-sizing:border-box;  
+    }
+    .epp-air-top-32--tb{
+        padding-top:32px!important;
+        box-sizing:border-box;  
+    }
+    .epp-air-bottom-32--tb{
+        padding-bottom:32px!important;
+        box-sizing:border-box;  
+    }
+
+    // Space Table
 
 	.epp-space-8--tb{
 	    margin:8px;
@@ -319,6 +533,38 @@
 	.epp-space-bottom-16--tb{
 	    margin-bottom:16px;
 	}
+    .epp-space-24--tb{
+        margin:24px;
+    }
+    .epp-space-left-24--tb{
+        margin-left:24px;
+    }
+    .epp-space-right-24--tb{
+        margin-right:24px;
+    }
+    .epp-space-top-24--tb{
+        margin-top:24px;
+    }
+    .epp-space-bottom-24--tb{
+        margin-bottom:24px;
+    }
+    .epp-space-32--tb{
+        margin:32px;
+    }
+    .epp-space-left-32--tb{
+        margin-left:32px;
+    }
+    .epp-space-right-32--tb{
+        margin-right:32px;
+    }
+    .epp-space-top-32--tb{
+        margin-top:32px;
+    }
+    .epp-space-bottom-32--tb{
+        margin-bottom:32px;
+    }
+
+    // Align Table
 
     .align-right--tb{
 		text-align: right;
@@ -330,26 +576,27 @@
 		text-align: center;
 	}
 
+    // Hidden Table
+
 	.hidden--tb{
         display:none!important;
     }
+    
+    // Float Table
 
-	.align--right--tb{
-		text-align: right;
-	}
-	.align--left--tb{
-		text-align: left;
-	}
-	.align--center--tb{
-		text-align: center;
-	}
+    .float-left--tb{
+        float: left;
+    }
+    .float-right--tb{
+        float: right;
+    }
 }
 
-// Align Desktop from 1152
+// Desktop from 1152
 
 @media (min-width:1152px){
 
-	 // Columns Space Desktop
+	 // Air Desktop
 
     .epp-air-8--dt{
         padding: 8px!important;
@@ -391,6 +638,48 @@
         padding-bottom:16px!important;
         box-sizing:border-box;  
     }
+    .epp-air-24--dt{
+        padding: 24px!important;
+        box-sizing:border-box;
+    }
+    .epp-air-left-24--dt{
+        padding-left:24px!important;
+        box-sizing:border-box;  
+    }
+    .epp-air-right-24--dt{
+        padding-right:24px!important;
+        box-sizing:border-box;  
+    }
+    .epp-air-top-24--dt{
+        padding-top:24px!important;
+        box-sizing:border-box;  
+    }
+    .epp-air-bottom-24--dt{
+        padding-bottom:24px!important;
+        box-sizing:border-box;  
+    }
+    .epp-air-32--dt{
+        padding: 32px!important;
+        box-sizing:border-box;
+    }
+    .epp-air-left-32--dt{
+        padding-left:32px!important;
+        box-sizing:border-box;  
+    }
+    .epp-air-right-32--dt{
+        padding-right:32px!important;
+        box-sizing:border-box;  
+    }
+    .epp-air-top-32--dt{
+        padding-top:32px!important;
+        box-sizing:border-box;  
+    }
+    .epp-air-bottom-32--dt{
+        padding-bottom:32px!important;
+        box-sizing:border-box;  
+    }
+
+    // Columns Space Desktop
 
 	.epp-space-8--dt{
 	    margin:8px;
@@ -422,6 +711,38 @@
 	.epp-space-bottom-16--dt{
 	    margin-bottom:16px;
 	}
+    .epp-space-24--dt{
+        margin:24px;
+    }
+    .epp-space-left-24--dt{
+        margin-left:24px;
+    }
+    .epp-space-right-24--dt{
+        margin-right:24px;
+    }
+    .epp-space-top-24--dt{
+        margin-top:24px;
+    }
+    .epp-space-bottom-24--dt{
+        margin-bottom:24px;
+    }
+    .epp-space-32--dt{
+        margin:32px;
+    }
+    .epp-space-left-32--dt{
+        margin-left:32px;
+    }
+    .epp-space-right-32--dt{
+        margin-right:32px;
+    }
+    .epp-space-top-32--dt{
+        margin-top:32px;
+    }
+    .epp-space-bottom-32--dt{
+        margin-bottom:32px;
+    }
+
+    // Align Desktop
 
 	.align-right--dt{
 		text-align: right;
@@ -432,7 +753,19 @@
 	.align-center--dt{
 		text-align: center;
 	}
+
+    // Hidden Desktop
+
 	.hidden--dt{
         display:none!important;
+    }
+
+    //Float Desktop
+
+    .float-left--dt{
+        float: left;
+    }
+    .float-right--dt{
+        float: right;
     }
 }
